--- a/search/search.html
+++ b/search/search.html
@@ -2,6 +2,7 @@
     <title>Reddit Drama Search</title>
     <link rel="stylesheet" type="text/css" href="lib\jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="lib\bootstrap\css\bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="search.css">
     <script type="text/javascript" charset="utf8" src="lib/jquery-3.4.1min.js"></script>
     <script type="text/javascript" charset="utf8" src="lib/jquery.dataTables.min.js"></script>
     <script type="text/javascript" charset="utf8" src="lib\bootstrap\js\bootstrap.min.js"></script>
@@ -40,7 +41,7 @@
 
         </form>
         <button onclick="fetchComments()" class="btn-primary">SEARCH</button><br/><br/><br/>
-        <table id="myTable" class="display" style="width:100% table table-striped table-bordered">
+        <table id="myTable" class="display">
         </table>
     </body>
 </html>
