--- a/search/search.html
+++ b/search/search.html
@@ -26,7 +26,7 @@
                     Sort By:
                     <select class="form-control" data-style="btn-primary" id="sortBySearch" >
                             <option value="COMMENTS"># Replies</option>
-                            <option value="SCORE">Score</option>
+                            <option value="SCORE" selected>Score</option>
                             <option value="DATE">Date</option>
                     </select>
                     Limit:
